# driftwm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  config.example.toml  config.reference.toml  diff.txt  driftwm.desktop  flake.nix  install.sh  test-config.toml  test-nested.sh
.github/workflows/: ci.yml  codeberg-mirror.yml  docs.yml
assets/shaders/: blue_drift.glsl  dark_sea.glsl  dot_grid.glsl  (+1 more)
config/: config.toml
docs/: CAVEATS.md  DESIGN.md  ERROR_HANDLING.md  TROUBLESHOOTING.md  cli.md  config.md  gigapixel-wallpapers.md  ipc.md  plan_modifications.md  session.md  shaders.md  smithay-api.md  window-rules.md  xwayland-plan.md  xwayland-todo.md  xwayland_test.md
extras/: README.md  config.toml  install.sh
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
nix/: hm-module.nix  nixos-module.nix
protocols/: hyprland-toplevel-export-v1.xml
resources/: driftwm-portals.conf  driftwm-session
src/: auto_placement.rs  canvas.rs  cluster.rs  config.rs  decorations.rs  focus.rs  input.rs  ipc.rs  lib.rs  main.rs  render.rs  session.rs  signals.rs  snap.rs  state.rs  surface_tree.rs  window_ext.rs  winit.rs  xwayland.rs
tests/: canvas_navigation_test.rs  canvas_transforms_test.rs  canvas_zoom_test.rs  config_bindings_test.rs  config_parse_test.rs  config_reference_test.rs  config_toml_test.rs  snap_test.rs  window_rules_test.rs
widgets/: calendar_widget.py  canvas_widget.py  clock_widget.py  common.py  launch.sh  layout_widget.py  notif_widget.py  stats_widget.py  weather_widget.py
(+177 files in other folders)
